# python-library

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
my_library/: __init__.py  cli.py
my_library/cv/: __init__.py  operations.py
my_library/io/: __init__.py  image.py
tests/: conftest.py  fixtures.py
tests/cv/: test_bright.py  test_crop.py  test_operations.py
