[tool.poetry]
name = "my-library"
version = "0.1.0"
description = "a python library example with well-know tools and best practices of software engineer"
authors = ["Arnaldo Gualberto <arnaldo.g12@gmail.com>"]
readme = "README.md"
packages = [{include = "my_library"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
interrogate = "^1.5.0"
pre-commit = "^3.3.1"
autoflake8 = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
